; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_flush.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 (i32)*, i32 (i64)*, i32 (i32, i64, i32)* }
%struct.Adapter = type { i64, i32 }

@PCAP = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SENDQ_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rawsock_flush(%struct.Adapter* %0) #0 {
  %2 = alloca %struct.Adapter*, align 8
  store %struct.Adapter* %0, %struct.Adapter** %2, align 8
  %3 = load %struct.Adapter*, %struct.Adapter** %2, align 8
  %4 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %26

7:                                                ; preds = %1
  %8 = load i32 (i32, i64, i32)*, i32 (i32, i64, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @PCAP, i32 0, i32 2), align 8
  %9 = load %struct.Adapter*, %struct.Adapter** %2, align 8
  %10 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load %struct.Adapter*, %struct.Adapter** %2, align 8
  %13 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 %8(i32 %11, i64 %14, i32 0)
  %16 = load i32 (i64)*, i32 (i64)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @PCAP, i32 0, i32 1), align 8
  %17 = load %struct.Adapter*, %struct.Adapter** %2, align 8
  %18 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i32 %16(i64 %19)
  %21 = load i64 (i32)*, i64 (i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @PCAP, i32 0, i32 0), align 8
  %22 = load i32, i32* @SENDQ_SIZE, align 4
  %23 = call i64 %21(i32 %22)
  %24 = load %struct.Adapter*, %struct.Adapter** %2, align 8
  %25 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %24, i32 0, i32 0
  store i64 %23, i64* %25, align 8
  br label %26

26:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
